--- a/examples/example-right.html
+++ b/examples/example-right.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="" />
 	
 	<link rel="stylesheet" href="example.css" type="text/css" />
-	<link rel="stylesheet" href="css/toolslide.css" type="text/css" />
+	<link rel="stylesheet" href="../dist/css/toolslide.css" type="text/css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
 	<link rel="stylesheet" href="css/highlight.custom.css">
 </head>
@@ -52,7 +52,7 @@
 		</div>
 	</div>
 	<div></div>
-<script src="js/toolslide.js"></script>
+<script src="../dist/js/toolslide.js"></script>
 <script src="js/highlight.custom.js"></script>
 <script>
 	hljs.configure({tabReplace: '  '});
