--- a/examples/example-left.html
+++ b/examples/example-left.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/highlight.custom.css">
 </head>
 <body>
-	<div id="toolslide" class="toolslide"
+	<div id="toolslide"
 		ts-position="left" ts-width="40%" ts-height="100%" ts-closeable="true" ts-start-open="true"
 		ts-sticky="true" ts-autoclose="true" ts-autoclose-delay="5" ts-click-outside-to-close="false">
 		<div class="ts-nav-container">
