--- a/examples/example-top.html
+++ b/examples/example-top.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/highlight.custom.css">
 </head>
 <body>
-	<div id="toolslide" class="toolslide">
+	<div id="toolslide">
 		<div class="ts-nav-container">
 			<div class="ts-nav-item" ts-target="first">
 				<i class="glyphicon glyphicon-envelope"></i>
