--- a/examples/example-right.html
+++ b/examples/example-right.html
@@ -5,63 +5,57 @@
 	<meta name="author" content="your name" />
 	<meta name="description" content="" />
 	
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
 	<link rel="stylesheet" href="example.css" type="text/css" />
-	<link rel="stylesheet" href="../dist/css/toolslide.css" type="text/css" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
-	<link rel="stylesheet" href="css/highlight.custom.css">
+	<link rel="stylesheet" href="../dist/toolslide.css" type="text/css" />
 </head>
 <body>
-	<div id="toolslide">
-		<div class="ts-nav-container">
-			<div class="ts-nav-item" ts-target="first">
-				<i class="glyphicon glyphicon-envelope"></i>
-			</div>
-			<div class="ts-nav-item" ts-target="second">
-				<i class="glyphicon glyphicon-user"></i>
-			</div>
-			<div class="ts-nav-item" ts-target="third">
-				<i class="glyphicon glyphicon-search"></i>
-			</div>
-		</div>
-		<div class="ts-content-container">
-			<div id="first" class="ts-content-item">
-				<div class="example-panel">
-					<h5>Panel configuration:</h5>
-<pre><code class="json">{ 
-	position: "right",
-	height: "100%",
-	width: "400px",
-	startOpen: true,
-	animations: {
-		replace: "slidefade 1.0s ease-in-out",
-		toggle: "slide 0.5s ease",
-	}
-}</code></pre>
-				</div>
-			</div>
-			<div id="second" class="ts-content-item">
-				<div class="example-panel">
-					<span>Second panel content goes here</span>
-				</div>
-			</div>
-			<div id="third" class="ts-content-item">
-				<div class="example-panel">
-					<span>Third panel content goes here</span>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div></div>
-<script src="../dist/js/toolslide.js"></script>
-<script src="js/highlight.custom.js"></script>
+    <div class="example-container">
+        <div>
+            <span>This is some example text containing no meaningful message at all...</span>
+        </div>
+        <div id="toolslide">
+          <div class="ts-container">
+            <div class="ts-nav-container">
+                <div class="ts-nav-item" ts-target="first">
+                    <i class="glyphicon glyphicon-envelope"></i>
+                </div>
+                <div class="ts-nav-item" ts-target="second">
+                    <i class="glyphicon glyphicon-user"></i>
+                </div>
+                <div class="ts-nav-item" ts-target="third">
+                    <i class="glyphicon glyphicon-search"></i>
+                </div>
+            </div>
+            <div class="ts-content-container">
+                <div id="first" class="ts-content-item">
+                    <div class="example-panel">
+                        <h5>Panel configuration:</h5>
+                        <textarea>Some fancy text here...</textarea>
+                    </div>
+                </div>
+                <div id="second" class="ts-content-item">
+                    <div class="example-panel">
+                        <span>Second panel content goes here</span>
+                    </div>
+                </div>
+                <div id="third" class="ts-content-item">
+                    <div class="example-panel">
+                        <span>Third panel content goes here</span>
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
+    </div>
+<script src="../dist/toolslide.js"></script>
 <script>
-	hljs.configure({tabReplace: '  '});
-	hljs.initHighlightingOnLoad();
 	var toolslide = toolslide("#toolslide", {
 		position: "right",
 		height: "100%",
 		width: "400px",
 		startOpen: true,
+        clickOutsideToClose: false,
 		animations: {
 			replace: "slidefade 1.0s ease-in-out",
 			toggle: "slide 0.5s ease",
