Implemented new properties: embed, toggleButton, navigationItemWidth, navigationItemHeight

--- a/examples/example-bottom.html
+++ b/examples/example-bottom.html
@@ -51,7 +51,7 @@
 		position: "bottom",
 		height: "150px",
 		width: "100%",
-		startOpen: true,
+		startOpen: false,
 		animations: {
 			replace: "slidefade 1.0s ease-in-out",
 			toggle: "slide 0.5s ease",
