--- a/examples/example-top.html
+++ b/examples/example-top.html
@@ -48,6 +48,19 @@
             </div>
         </div>
 	</div>
+    <div id="main">
+        <div class="nav">
+            <div type="button" id="toggle-menu-button" class="pull-left">
+                <i class="glyphicon glyphicon-menu-hamburger"></i>
+            </div>
+        </div>
+        <div class="content">
+            <div class="col-xs-12">
+                <h3>This is a heading</h3>
+                <p>This is some text...</p>
+            </div>
+        </div>
+    </div>
 <script src="../dist/toolslide.js"></script>
 <script>
 	var toolslide = toolslide("#toolslide", {
