--- a/examples/example-left.html
+++ b/examples/example-left.html
@@ -52,6 +52,7 @@
             </div>
         </div>
     </div>
+  </div>
 <script src="../dist/toolslide.js"></script>
 <script>
 	var toolslide = toolslide("#toolslide", {
