--- a/examples/example-right.html
+++ b/examples/example-right.html
@@ -56,6 +56,8 @@
 		width: "400px",
 		startOpen: true,
         clickOutsideToClose: false,
+        navigationOffsetY: "-50px",
+        navigationOffsetY: "-50px",
 		animations: {
 			replace: "slidefade 1.0s ease-in-out",
 			toggle: "slide 0.5s ease",
