--- a/examples/example-left.html
+++ b/examples/example-left.html
@@ -14,7 +14,15 @@
     <div id="toolslide">
       <div class="ts-container">
         <div class="ts-nav-container">
-            
+            <div class="ts-nav-item" ts-target="first">
+                <i class="glyphicon glyphicon-envelope"></i>
+            </div>
+            <div class="ts-nav-item" ts-target="second">
+                <i class="glyphicon glyphicon-user"></i>
+            </div>
+            <div class="ts-nav-item" ts-target="third">
+                <i class="glyphicon glyphicon-search"></i>
+            </div>
         </div>
         <div class="ts-content-container">
             <div id="first" class="ts-content-item">
